# flexrayusbinterface

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  flexrayusbinterface.rosinstall  install_deps.sh  install_ftd2xx.sh  install_libftd2.sh  install_libftd2_and_udev_rules.sh  install_udev_rules.sh  package.xml
cmake/: FindMapbox.cmake  FindUnits.cmake  Findlibftd2xx.cmake
doc/html/: CommunicationData_8h_source.html  FlexRayUSBInterface_8h.html  FlexRayUSBInterface_8h_source.html  annotated.html  classFlexRayUSBInterface-members.html  classFlexRayUSBInterface.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  hierarchy.html  index.html  structcomsCommandFrame-members.html  structcomsCommandFrame.html  structcontrol__Parameters__t-members.html  structcontrol__Parameters__t.html  structganglionData-members.html  structganglionData.html  structmuscleState-members.html  structmuscleState.html  structpid__Parameters__t-members.html  structpid__Parameters__t.html  structqueueableControlParameters__t-members.html  structqueueableControlParameters__t.html  unionflags__t-members.html  unionflags__t.html  unionparameters__t-members.html  unionparameters__t.html
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  defines_2.js  files_0.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  searchdata.js  variables_0.js  variables_1.js  variables_3.js  variables_6.js  variables_7.js  variables_9.js  variables_a.js
include/: CommunicationData.h  FlexRayHardwareInterface.hpp  FlexRayUSBInterface.h  VirtualRoboy.hpp  ncurses_flexray.hpp  timer.hpp
include/flexrayusbinterface/: Calibration.hpp  FlexRayBus.hpp  FlexRayHardwareInterface.hpp  FtResult.hpp  Message.hpp  Muscle.hpp  Mutex.hpp  Parsers.hpp  Protocol.hpp  Range.hpp  Spi.hpp  Types.hpp  UsbChannel.hpp  VirtualRoboy.hpp  ncurses_flexray.hpp
lib/: libftd2xx_1.1.12_amd64.deb
src/: Calibration.cpp  FlexRayHardwareInterface.cpp  FlexRayUSBInterface.cpp  ListDevices.cpp  Muscle.cpp  Protocol.cpp  Spi.cpp  Spi.hpp  UsbChannel.cpp  VirtualRoboy.cpp  main.cpp
test/: Message.cpp  Protocol.cpp  Slot.cpp
test/yaml/: Parsers.cpp
test/yaml/data/: RobotDescription.yaml
udev/: 30-ftdi.rules
