<package>
    <name>flexrayusbinterface</name>
    <version>0.0.0</version>
    <description>ncurses interface for controlling myoMuscles via flexray</description>
    <maintainer email="simon.trendel@tum.de">Simon Trendel</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <run_depend>message_runtime</run_depend>

    <export>
    </export>
</package>
